fix: bg color on larger screens and max width feat: handle game over state/screen events fix: camera aspect ratio and re-enabling of capture on ios

--- a/roshambo-ui/src/index.css
+++ b/roshambo-ui/src/index.css
@@ -20,7 +20,7 @@
 }
 
 @media only screen and (min-width: 600px)  {
-  #app-container {
+  #root {
     max-width: 800px;
     margin: 0 auto;
   }
